<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:clickable="true"
    android:orientation="vertical" >

    <com.ldfs.demo.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:layout_marginTop="10dp"
        app:titlebar_page_title="@string/center_title"
        app:titlebar_title="@string/title" />

    <CheckBox
        android:id="@+id/cb_display_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/display_home" />

    <CheckBox
        android:id="@+id/cb_show_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/show_loading" />

    <CheckBox
        android:id="@+id/cb_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/show_title" />

    <CheckBox
        android:id="@+id/cb_center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/show_center_title" />

    <CheckBox
        android:id="@+id/cb_show_divier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/show_menu_divier" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_add_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_menu" />

        <Button
            android:id="@+id/btn_add_imagemenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_image_menu" />

        <Button
            android:id="@+id/btn_remove_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_menu" />

        <Button
            android:id="@+id/btn_clear_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_menu" />
    </LinearLayout>

</LinearLayout>