<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_circle_pager"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/dark_gray" />

    <com.ldfs.demo.widget.indicator.ViewPagerIndicator
        android:id="@+id/vp_indicator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/radius_size"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_radius_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/radius_padding"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_radius_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/radius_scale"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_radius_scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/gravity"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <RadioGroup
        android:id="@+id/rg_gravity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/center"
            android:textColor="@color/text_color" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/left"
            android:textColor="@color/text_color" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/right"
            android:textColor="@color/text_color" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/circle_anim_type"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <RadioGroup
        android:id="@+id/rg_anim_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anim_move"
            android:textColor="@color/text_color" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anim_rate"
            android:textColor="@color/text_color" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anim_size"
            android:textColor="@color/text_color" />
    </RadioGroup>

</LinearLayout>