<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:clickable="true">


    <com.ldfs.demo.widget.EditTextView
        android:id="@+id/et_editor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:editable="true"
        android:focusable="true"
        android:text="@string/article" />

    <TextView
        android:id="@+id/tv_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/set_font"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_left_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/set_left_padding"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_left_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_top_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/set_top_padding"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_top_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>