<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:clickable="true"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar_test"
            android:visibility="visible" />


        <TextView
            android:id="@+id/tv_month_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <com.ldfs.demo.widget.calendar.CalendarView
            android:id="@+id/cv_calendar_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/dark_gray"
            auto:cd_day_sort="east"
            auto:cd_day_text_color="@color/white"
            auto:cd_day_text_size="15sp"
            auto:cd_divide_size="1dp"
            auto:cd_title_height="40dp"
            auto:cd_day_mode="circle"
            auto:cd_title_text_size="15sp"
            auto:cd_day_mark_color="@color/red"/>

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar_mode"
            android:visibility="visible" />

        <com.ldfs.demo.widget.RadioGridLayout
            android:id="@+id/rl_calendar_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:rl_mode="single_choose"
            auto:rl_check_res="@drawable/checked1"/>

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_change"
            android:visibility="visible" />

        <com.ldfs.demo.widget.RadioGridLayout
            android:id="@+id/fl_change_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:rl_mode="single_choose"/>


        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_mode"
            android:visibility="visible" />

        <com.ldfs.demo.widget.RadioGridLayout
            android:id="@+id/fl_sort_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:rl_mode="single_choose"
            auto:rl_check_res="@drawable/checked1"/>


        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_mode"
            android:visibility="visible" />

        <com.ldfs.demo.widget.RadioGridLayout
            android:id="@+id/fl_click_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:fg_cellwidth="100dp"
            auto:rl_mode="single_choose"
            auto:rl_check_res="@drawable/checked1"/>


    </LinearLayout>
</ScrollView>