<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ldfs.demo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/app_bg"
    android:clickable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/radio_group_info"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <com.ldfs.demo.widget.OptionGroup
        android:id="@+id/og_grounp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:groupData="@array/test_array" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/color"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/radio"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_title" />

    <SeekBar
        android:id="@+id/sb_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>